tests/errors/syn_method35.java
public class syn_method35 {
static int[] main ( ) {
 
}
}